[package]
name = "lob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite =  { version = "0.17.2", features = ["native-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"
#fixed = { version = "1.13.1", features = ["serde", "std", "serde-str"] }
rust_decimal = { version = "1.22", features = ["serde-with-float"] }

